--- a/episodes/world-leaders-dance-off.html
+++ b/episodes/world-leaders-dance-off.html
@@ -8,40 +8,42 @@
 </head>
 <body>
 
-  <!-- Include the tag for introductory content -->
+ <!-- Include the tag for introductory content -->
+ <header>
+  <!-- Display Laugh Track News logo nested in an anchor tag to link to index.html -->
+   <a href="index.html"><img src="../images/laugh-track-news-logo.svg" alt="laugh track news logo"></a>
+  <!-- Write the markup for a navigation and link items to appropriate pages -->
+    <nav>
+      <!-- About the podcast can use # as a placeholder to keep the user on this page. -->
+      <a href="index.html"> the podcast</a>
 
-    <!-- Display Laugh Track News logo nested in an anchor tag to link to index.html -->
-    
-    <!-- Write the markup for a navigation and link items to appropriate pages -->
+      <!-- Link to external url: https://open.spotify.com/genre/podcasts-page  -->
+      <a href="https://open.spotify.com/genre/podcasts-page">Listen on Spotify</a>
+    </nav>
 
-        <!-- About the podcast can use # as a placeholder to keep the user on this page. -->
-        About the podcast
-
-        <!-- Link to external url: https://open.spotify.com/genre/podcasts-page  -->
-        Listen on Spotify
-
-
+</header>
 
 
   <!-- Add an element that represents the main content of the page -->
-
+  <main>
     <!-- Include a tag for independent, self-contained content content ex. blog post -->
+    <aside>
       <!-- Main heading for the post -->
-      World Leaders' Dance-Off
+      <h2>World Leaders' Dance-Off</h2>
 
       <!-- Markup published and length using the time element -->
       Published: January 25, 2024
       Length of episode: 30 min
 
       <!-- Display image relevant to topic -->
+      <img src="../images/world-leader-dance-off.jpeg" alt="Image of world leaders dancing">
+      <p>Strap on your dancing shoes and get ready for a diplomatic showdown like never before. In this episode, we dive into the surreal world of global politics where leaders decide to replace traditional negotiations with a dance-off.</p>
 
-      Strap on your dancing shoes and get ready for a diplomatic showdown like never before. In this episode, we dive into the surreal world of global politics where leaders decide to replace traditional negotiations with a dance-off.
+      <p>From the United Nations Ballroom to the Kremlin Disco, we take you behind the scenes of this unprecedented event. Join us as we analyze the dance styles, judge the twirls and spins, and, of course, speculate on the political fallout.</p>
 
-      From the United Nations Ballroom to the Kremlin Disco, we take you behind the scenes of this unprecedented event. Join us as we analyze the dance styles, judge the twirls and spins, and, of course, speculate on the political fallout.
-
-      Will alliances be formed on the dance floor, or will the world be left in a dance-induced political chaos? Tune in to find out!
-
-
+      <p>Will alliances be formed on the dance floor, or will the world be left in a dance-induced political chaos? Tune in to find out!</p>
+    </aside>
+</main>
 
 
   <!-- Include the tag for footer content -->
